# personal-chatbot

./: README.md  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt
chains/: conversation_chain.py  redirect_chain.py  retrieval_chain.py  router_chain.py
data/raw/: about_me_portfolio.txt  bachelor_project.txt  cv.txt  diablo_project.txt  education_portfolio.txt  experience_portfolio.txt  facial_recognition_project.txt  skills_portfolio.txt  smart_chess_project.txt  splash_project.txt  sweepresort_project.txt  taskify_project.txt  vclinic_project.txt  zaki_project.txt  zombie_invasion_project.txt
data/vectorstore/: index.faiss  index.pkl
prompts/: conversation_prompt.py  redirect_prompt.py  retrieval_prompt.py  router_prompt.py
utils/: create_vectorstore.ipynb  llm_fallback.py
