[project]
name = "personal-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-groq",
    "langchain-huggingface",
    "chromadb",
    "faiss-cpu",
    "pydantic",
    "sqlalchemy",
    "numpy",
    "scikit-learn",
    "sentence-transformers",
    "torch",
    "transformers",
    "requests",
    "httpx",
    "orjson"
]
