[project]
name = "personal-chatbot"
version = "0.1.0"
description = "A FastAPI-based AI chatbot application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-groq",
    "langchain-huggingface",
    "faiss-cpu",
    "pydantic",
    "sqlalchemy",
    "numpy",
    "sentence-transformers",
    "transformers",
    "requests",
    "httpx",
    "orjson",
]
